add a client controller and new views to display a client create form and a list of clients in the stylists details page

--- a/HairSalon/Views/Stylist/Details.cshtml
+++ b/HairSalon/Views/Stylist/Details.cshtml
@@ -11,7 +11,7 @@
 <ul>
     @foreach(Client client in ViewBag.theirClients)
     {
-    <li></li>
+    <li>@Html.ActionLink($"{client.Name}", "Details", "Client", new { id = client.ClientId})</li>
     }
 
 </ul>
