--- a/HairSalon/Views/Client/Create.cshtml
+++ b/HairSalon/Views/Client/Create.cshtml
@@ -1,6 +1,6 @@
 @model Salon.Models.Client;
 
-<h1>Fill out the form to add a client to @ViewBag.theStylist.Name + 's roster</h1>
+<h1>Fill out the form to add a client to @ViewBag.theStylist.Name's roster</h1>
 
 @using (Html.BeginForm())
 {
