add edit and delete routes for stylists

--- a/HairSalon/Views/Client/Details.cshtml
+++ b/HairSalon/Views/Client/Details.cshtml
@@ -2,6 +2,7 @@
 
 <p>@Html.ActionLink("Click here to Edit their name", "Edit", new { id = @Model.ClientId})</p>
 
-<p>@Html.ActionLink("Click here to Delete their name off of your client list", "Delete")</p>
+<p>@Html.ActionLink("Click here to Delete their name off of your client list", "Delete", new { id = @Model.ClientId})</p>
 
 
+  
