--- a/HairSalon/Views/Stylist/Delete.cshtml
+++ b/HairSalon/Views/Stylist/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Salon.Models.Client;
+model Salon.Models.Stylist;
 
 @* <h1>This page is to delete @Model.Name from your client roster</h1> *@
 
