--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
+@{
+    Layout = "_Layout";
+}
+
 <h1>Welcome Claire!</h1>
 
 <p>@Html.ActionLink("Click here to see your list of stylists", "Index", "Stylist")</p>
