--- a/HairSalon/Views/Stylist/Details.cshtml
+++ b/HairSalon/Views/Stylist/Details.cshtml
@@ -17,3 +17,5 @@
 </ul>
 
 <p>@Html.ActionLink("Add a new client for " + $"{@Model.Name}", "Create", "Client", new { id = Model.StylistId })</p>
+<p>@Html.ActionLink("Click here to edit this stylist", "Edit", new { id = @Model.StylistId})</p>
+<p>@Html.ActionLink("Click here to delete this stylist", "Delete", new { id = @Model.StylistId})</p>
