--- a/HairSalon/Views/Stylist/Edit.cshtml
+++ b/HairSalon/Views/Stylist/Edit.cshtml
@@ -1,13 +1,14 @@
-@model Salon.Models.Client;
+@model Salon.Models.Stylist;
 
 <h1>Edit client: @Model.Name</h1>
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.ClientId)
     @Html.HiddenFor(model => model.StylistId)
     @Html.LabelFor(model => model.Name)
     @Html.EditorFor(model => model.Name)
+    @Html.LabelFor(model => model.Details)
+    @Html.EditorFor(model => model.Details)
 
     <input type="submit" value="Save Changes" />
 }
