--- a/HairSalon/Views/Stylist/Create.cshtml
+++ b/HairSalon/Views/Stylist/Create.cshtml
@@ -1,6 +1,9 @@
 @model Salon.Models.Stylist;
+@{
+    Layout = "_Layout";
+}
 
-<h2>Fill out the form below to add a new stylist to your records</h2>
+<h2 class="jumbotron">Fill out the form below to add a new stylist to your records</h2>
 
 @using (Html.BeginForm())
 {
