--- a/HairSalon/Views/Stylist/Delete.cshtml
+++ b/HairSalon/Views/Stylist/Delete.cshtml
@@ -1,6 +1,9 @@
-model Salon.Models.Stylist;
+@model Salon.Models.Stylist;
+@{
+    Layout = "_Layout";
+}
 
-@* <h1>This page is to delete @Model.Name from your client roster</h1> *@
+<h1 class="jumbotron">This page is to delete @Model.Name from your client roster</h1>
 
 <h3>Are you sure you want to delete them?</h3>
 
