--- a/HairSalon/Views/Stylist/Details.cshtml
+++ b/HairSalon/Views/Stylist/Details.cshtml
@@ -1,6 +1,9 @@
 @using Salon.Models;
+@{
+    Layout = "_Layout";
+}
 
-<h1>@Model.Name</h1>
+<h1 class="jumbotron">@Model.Name</h1>
 
 <h3>@Model.Details</h3>
 
