--- a/HairSalon/Views/Client/Delete.cshtml
+++ b/HairSalon/Views/Client/Delete.cshtml
@@ -1,4 +1,7 @@
 @model Salon.Models.Client;
+@{
+    Layout = "_Layout";
+}
 
 @* <h1>This page is to delete @Model.Name from your client roster</h1> *@
 
