--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
     Layout = "_Layout";
 }
 
-<h1>Welcome Claire!</h1>
+<h1 class="jumbotron">Welcome Claire!</h1>
 
 <p>@Html.ActionLink("Click here to see your list of stylists", "Index", "Stylist")</p>
