--- a/HairSalon/Views/Stylist/Edit.cshtml
+++ b/HairSalon/Views/Stylist/Edit.cshtml
@@ -1,6 +1,9 @@
 @model Salon.Models.Stylist;
+@{
+    Layout = "_Layout";
+}
 
-<h1>Edit client: @Model.Name</h1>
+<h1 class="jumbotron">Edit client: @Model.Name</h1>
 
 @using (Html.BeginForm())
 {
